--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 # Use this format (array-of-tables):
 [[kv_namespaces]]
 binding = "PROFILE_VECTORS"
-id = "$KV_SECRET"
+id = "KV_SECRET"
 preview_id = "KV_SECRET"
 
 [vars]
