fixX wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,10 +6,9 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 # Use this format (array-of-tables):
 [[kv_namespaces]]
 binding = "PROFILE_VECTORS"
-id = "$KV_SECRET"
-preview_id = "$KV_SECRET"
+id = "$PROFILE_VECTORS"
+preview_id = "$PROFILE_VECTORS"
 
 [vars]
 TURNSTILE_SECRET = "$TURNSTILE_SECRET"
 GROQ_API_KEY = "$GROQ_API_KEY"
-KV_SECRET = "$KV_SECRET"
