--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,9 +3,10 @@ name = "melorga"
 pages_build_output_dir = ".svelte-kit/cloudflare"
 compatibility_date = "2025-07-29"
 
-[vars]
-GROQ_API_KEY = "$GROQ_API_KEY"
-TURNSTILE_SECRET = "$TURNSTILE_SECRET"
+[[kv_namespaces]]
+binding = "PROFILE_VECTORS"
+id = "${KV_SECRET_ID}"
+preview_id = "${KV_SECRET_ID}"
 
 [env.production]
 compatibility_flags = [ "nodejs_compat" ]
